# mpg123-hs

./: .gitignore  .travis.yml  README.md  makefile  mpg123-setup.sh  mpg123.cabal  stack.yaml
app/: Main.hs
cbits/: libmpg123.la
cbits/.deps/: dct36_avx.Plo  dct36_x86_64.Plo  dct64.Plo  dct64_avx.Plo  dct64_avx_float.Plo  dct64_x86_64.Plo  dct64_x86_64_float.Plo  dither.Plo  equalizer.Plo  feature.Plo  format.Plo  frame.Plo  getcpuflags_x86_64.Plo  icy.Plo  icy2utf8.Plo  id3.Plo  index.Plo  layer1.Plo  layer2.Plo  layer3.Plo  lfs_alias.Plo  libmpg123.Plo  ntom.Plo  optimize.Plo  parse.Plo  readers.Plo  stringbuf.Plo  synth.Plo  synth_8bit.Plo  synth_real.Plo  synth_s32.Plo  synth_stereo_avx.Plo  synth_stereo_avx_float.Plo  synth_stereo_avx_s32.Plo  synth_stereo_x86_64.Plo  synth_stereo_x86_64_float.Plo  synth_stereo_x86_64_s32.Plo  synth_x86_64.Plo  synth_x86_64_float.Plo  synth_x86_64_s32.Plo  (+1 more)
cbits/.libs/: libmpg123-symbols.expsym  libmpg123.dylib  libmpg123.exp  libmpg123.lai
conduit-mpg123/: README.md  conduit-mpg123.cabal  stack.yaml
conduit-mpg123/src/Data/Conduit/Audio/: Mpg123.hs
src/Codec/: Mpg123.hs
src/Codec/Mpg123/: Internal.hs
src/Codec/Mpg123/Internal/: InlineC.hs
src/Data/: Utils.hs
src/Data/Conduit/Audio/: Mpg123.hs
test/: Spec.hs
