name:                mpg123
version:             0.1.0.0
synopsis:            Mpg123 bindings using inline-c
-- description:
homepage:            https://github.com/ocramz/mpg123#readme
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2017 Marco Zocca
category:            Codec
build-type:          Simple
extra-source-files:  README.md
-- extra-source-dirs:   include

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fobject-code -O0
  exposed-modules:     Codec.Mpg123
                       Codec.Mpg123.Internal
  build-depends:       base >= 4.7 && < 5
                     , inline-c
                     , template-haskell
                     , containers
  include-dirs:        cbits
  includes:            mpg123.h                        
  default-language:    Haskell2010

-- executable mpg123-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , mpg123
--                      , inline-c
--   default-language:    Haskell2010

test-suite mpg123-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mpg123
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ocramz/mpg123
