name:                mpg123
version:             0.1.0.0
synopsis:            Mpg123 bindings using inline-c
description:         Bindings to the mpg123 library for efficient MP3 decoding
                     .
                     Requires mpg123 (https://mpg123.de)
                     .
                     mpg123 is LGPL licensed, so you may dynamically link to it from a closed-source program.
homepage:            https://github.com/ocramz/mpg123#readme
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2017 Marco Zocca
category:            Codec
build-type:          Simple
extra-source-files:  README.md
-- extra-source-dirs:   include
-- extra-include-dirs:  /usr/local/include

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fobject-code -O0 -Wno-unused-imports
  exposed-modules:     Codec.Mpg123
                       Codec.Mpg123.Internal
                       Codec.Mpg123.Internal.InlineC                       
  build-depends:       base >= 4.7 && < 5
                     , inline-c >= 0.5.6.1
                     , template-haskell >= 2.11.1.0
                     , containers >= 0.5.7.1
                     , exceptions >= 0.8.3
                     -- DEBUG
                     -- , hspec
                     , HUnit
  -- include-dirs:        cbits
  -- includes:            mpg123.h                          
  default-language:    Haskell2010
  c-sources: src/Codec/Mpg123/Internal/InlineC.c
             src/Codec/Mpg123/Internal.c
  extra-libraries:     mpg123


-- executable mpg123-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , mpg123
--                      , inline-c
--   default-language:    Haskell2010

test-suite mpg123-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mpg123
                     -- , hspec
                     , HUnit
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ocramz/mpg123
