name:                conduit-mpg123
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/conduit-mpg123#readme
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2017 Marco Zocca
category:            Codec
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.Conduit.Audio.Mpg123
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010



test-suite conduit-mpg123-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , conduit-mpg123
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ocramz/conduit-mpg123
